Fixed nested .gist element too large style

--- a/mattbierner_com/static/style/page.scss
+++ b/mattbierner_com/static/style/page.scss
@@ -53,7 +53,7 @@ article section > figure {
   width: auto;
 }
 
-article section > .gist {
+article section .gist {
   width: col_width_em(8);
 }
 
